--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - ./haproxy/backends.map:/etc/haproxy/backends.map
       - ./haproxy/blocked.map:/etc/haproxy/blocked.map
       - ./haproxy/dataplaneapi.hcl:/etc/haproxy/dataplaneapi.hcl
-      - ./haproxy/trace.html:/etc/haproxy/trace.html
+      - ./haproxy/trace.txt:/etc/haproxy/trace.txt
       - ./src/scripts/:/etc/haproxy/scripts/
       - ./src/libs/:/etc/haproxy/libs/
       - ./haproxy/js/:/var/www/js/
@@ -32,9 +32,9 @@ services:
       - BUCKET_DURATION=43200
       - BACKEND_NAME=servers
       - SERVER_PREFIX=websrv
-  nginx:
-    ports:
-      - 81:80
-    image: "nginx:latest"
-    volumes:
-      - ./nginx:/usr/share/nginx/html
+#  nginx:
+#    ports:
+#      - 81:80
+#    image: "nginx:latest"
+#    volumes:
+#      - ./nginx:/usr/share/nginx/html
