--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -23,7 +23,7 @@ frontend http-in
 	http-request silent-drop unless is_existing_vhost
 
 	#debug only, /cdn-cgi/trace
-	#http-request return status 200 content-type "text/html; charset=utf-8" lf-file /etc/haproxy/trace.html if { path /cdn-cgi/trace }
+	#http-request return status 200 content-type "text/plain; charset=utf-8" lf-file /etc/haproxy/trace.txt if { path /cdn-cgi/trace }
 
 	# acl for blocked IPs/subnets
 	acl blocked_ip_or_subnet src,map_ip(/etc/haproxy/blocked.map) -m found
@@ -75,7 +75,7 @@ backend servers
 	http-response cache-store basic_cache if can_cache
 
 	# placeholder servers, activated by LUA or the control panel
-    server-template websrv 1-100 0.0.0.0:80 check disabled
+    server-template websrv 1-100 0.0.0.0:80 check disabled ssl verify none
 	# use server based on hostname
 	use-server %[req.hdr(host),lower,map(/etc/haproxy/backends.map)] if TRUE
 
